# makepoll

./: Dockerfile  README.md  output.csv  pyproject.toml  votes.json
makepoll/: extract_and_anonymise.py  script.py
tests/: test_makepoll.py
