[tool.poetry]
name = "makepoll"
version = "0.1.0"
description = ""
authors = ["oranges <email@oranges.net.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
click = "^8.1.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
unidecode = "^1.3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
